# DiyaPAssistant

./: .gitignore  README.md  app.py  cert.pem  config.py  config.toml  gen_cert.py  key.pem  main.py  pyproject.toml  requirements.txt  run_https.bat
.streamlit/: config.toml
core/: memory.py  prompts.py
public/: stylesheet.css  voice_ui.html
services/: llm_service.py  stt_services.py  tts_services.py
ui/: audio_player.py
